--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - 5432:5432
     networks:
-      - postgresql
+      - crystal
     restart: unless-stopped
 
   pgadmin:
@@ -29,7 +29,7 @@ services:
     ports:
       - 5050:80
     networks:
-      - postgresql
+      - crystal
     restart: unless-stopped
 
   swagger-ui:
@@ -42,12 +42,71 @@ services:
     environment:
       SWAGGER_JSON: /docs/crystal-services/products/v1/products.swagger.json
 
+  elasticsearch:
+    image: elasticsearch:7.17.27
+    environment:
+      - http.host=0.0.0.0
+      - transport.host=localhost
+      - network.host=0.0.0.0
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    deploy:
+      resources:
+        limits:
+          memory: 1g
+    networks:
+      - crystal
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+
+  mongo:
+    image: mongo:4.2
+    restart: always
+    networks:
+      - crystal
+    volumes:
+      - mongodata:/data/db
+
+  graylog:
+    image: graylog/graylog:4.0
+    environment:
+      # CHANGE ME (must be at least 16 characters)!
+      - GRAYLOG_PASSWORD_SECRET=somepasswordpepper
+      # Password: admin
+      - GRAYLOG_ROOT_PASSWORD_SHA2=8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
+      - GRAYLOG_HTTP_EXTERNAL_URI=http://127.0.0.1:9000/
+    entrypoint: /usr/bin/tini -- wait-for-it elasticsearch:9200 --  /docker-entrypoint.sh
+    networks:
+      - crystal
+    links:
+      - mongo
+      - elasticsearch
+    depends_on:
+      - mongo
+      - elasticsearch
+    ports:
+      - 9000:9000
+      # Syslog TCP
+      - 1514:1514
+      # Syslog UDP
+      - 1514:1514/udp
+      # GELF TCP
+      - 12201:12201
+      # GELF UDP
+      - 12201:12201/udp
+    restart: always
+
 networks:
-  postgresql:
+  crystal:
     driver: bridge
 
 volumes:
   postgres:
   pgadmin:
+  esdata:
+  mongodata:
 
 
