--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,36 @@
 version: '3.8'
 
 services:
+  product-service:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    logging:
+      driver: 'gelf'
+      options:
+        gelf-address: 'udp://localhost:12201'
+        tag: product-service
+    networks:
+      - crystal
+    depends_on:
+      - postgres
+    links:
+      - postgres
+    ports:
+      - 8081:8081 # REST
+      - 8082:8082 # gRPC
+    healthcheck:
+      test: [ 'CMD', 'curl', '-f', 'http://localhost:8000/live' ]
+      interval: 1m
+      timeout: 10s
+      retries: 3
+      start_period: 20s
+    volumes:
+      - ./migrations:/root/migrations
+      - ./config.yml:/root/config.yml
+
+
   postgres:
     image: postgres
     container_name: postgres
